# platform-capitalism

./: .env.example  .gitignore  .vercelignore  404.html  Dockerfile  EXAMPLE_GRANT_PROPOSAL.md  LICENSE  Makefile  README.md  VERCEL_DEBUG.md  VERCEL_DEPLOY.md  VERCEL_ISSUES.md  index.html  main.py  main_vercel.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  vercel.json
.github/workflows/: ci.yml  docs.yml
api/: index.py  requirements.txt  test.py
api/agents/: index.html
api/policy-engine/: index.html
api/scenarios/: index.html
app/: main.py
app/routes/: __init__.py  api_load_scenario.py  api_update_policy.py  creator_studio.py  dashboard.py  data_export.py  governance_lab.py  network.py  scenarios.py  transparency.py  ui_mobile_menu.py
app/simulation/: environment.py
architecture/agents/: index.html
architecture/environment/: index.html
architecture/overview/: index.html
architecture/policy-engine/: index.html
deploy/: README.md
docs/: HF_INTEGRATION_GUIDE.md  README.md  grant-proposal.md  index.md
grant-proposal/: index.html
guides/: CHANGELOG_HF_COLORS.md  CONTENT_TIMELINE_GUIDE.md  CONTROVERSIAL_CONTENT_FEATURE.md  DEPLOYMENT_GUIDE.md  GITHUB_PAGES_SETUP.md
routes/: __init__.py  api_load_scenario.py  api_update_policy.py  dashboard.py  data_export.py  governance_lab.py  ui_mobile_menu.py
search/: search_index.json
simulation/: __init__.py  content_generator.py  environment.py
tests/: MANUAL_TESTING.md  README.md  test_content_generator.py  test_simulation.py  validate_simulation.py
ui/: __init__.py
(+97 files in other folders)
