[project]
name = "platform-capitalism"
version = "0.1.0"
description = "Mears-grounded creator labor simulation with FastHTML UI"
authors = [{ name = "codeamt" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml",
    "monsterui>=1.0.32",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "pymdown-extensions>=10.3.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[tool.uv]
compile-bytecode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"